--- a/templates/test/index.html
+++ b/templates/test/index.html
@@ -22,7 +22,7 @@
     </form> -->
     <div class="container">
 
-        <h2 class="text-success"><center>Detection of melicious domain</center></h2>
+        <h2 class="text-success"><center>Detection of Malicious domain</center></h2>
         <hr class="danger">
     </div>
   
